syntax = "proto3";

option go_package = "api/api";

service ApiServer {
  rpc UserDetail (UserDetailRequest) returns (UserDetailReply) {}
}

message UserDetailRequest {
  int64 userId = 1;
}

message UserDetailReply {
  int64 userId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string avatar = 6;
  string status = 7;
  string createdAt = 8;
  string updatedAt = 9;
}